# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.

import("//build/ohos.gni")

group("gstplugins_base_packages") {
    deps = [
        ":gstplayback",
        ":gstfft",
        ":gstaudioconvert",
        ":gsttypefindfunctions",
        ":gstsubparse",
        ":gstaudioresample",
        ":gstaudiorate",
        ":gstaudiomixer",
        ":gstrawparse",
        ":gstriff",
        ":gstrtp",
        ":gstvideoconvert",
        ":gstvideoscale",
        ":gstapp",
    ]
}

config("gst_plugins_config") {
    visibility = [ ":*" ]

    include_dirs = [
        ".",
        "./gst-libs",
        "//third_party/gstreamer/gstreamer",
        "//third_party/gstreamer/gstreamer/libs",
        "//third_party/glib/glib",
        "//third_party/glib",
        "//third_party/glib/gmodule",
        "//third_party/zlib/",
    ]

    cflags = [
        "-Wall",
        "-Werror",
        #"-DBUILDING_GST",
        "-DGST_DISABLE_DEPRECATED",
        "-DHAVE_CONFIG_H",
        "-DCOLORSPACE=\"videoconvert\"",
        "-DLICENSE_TRANSLATIONS_PATH=\"./gst-libs/gst/tag/license-translations.dict\"",
        "-fno-strict-aliasing",
        "-Wno-sign-compare",
        "-Wno-builtin-requires-header",
        "-DOHOS_EXT_FUNC",
        "-DOHOS_OPT_COMPAT",
    ]
}

ohos_source_set("gstplayback_source") {
    sources = [
        "gst/playback/gstdecodebin2.c",
        "gst/playback/gstdecodebin3.c",
        "gst/playback/gsturidecodebin.c",
        "gst/playback/gsturidecodebin3.c",
        "gst/playback/gsturisourcebin.c",
        "gst/playback/gstparsebin.c",
        "gst/playback/gstplayback.c",
        "gst/playback/gstplaybin2.c",
        "gst/playback/gstplaybin3.c",
        "gst/playback/gstplaysink.c",
        "gst/playback/gstplay-enum.c",
        "gst/playback/gstsubtitleoverlay.c",
        "gst/playback/gstplaysinkvideoconvert.c",
        "gst/playback/gstplaysinkaudioconvert.c",
        "gst/playback/gstplaysinkconvertbin.c",
        "gst/playback/gststreamsynchronizer.c",
        "gst/playback/gstplaybackutils.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstplayback") {
    deps = [
        ":gstplayback_source",
        ":gstpbutils",
        ":gstaudio",
        ":gstvideo",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("gstpbutils_source") {
    sources = [
        "gst-libs/gst/pbutils/gstpluginsbaseversion.c",
        "gst-libs/gst/pbutils/pbutils.c",
        "gst-libs/gst/pbutils/codec-utils.c",
        "gst-libs/gst/pbutils/descriptions.c",
        "gst-libs/gst/pbutils/encoding-profile.c",
        "gst-libs/gst/pbutils/encoding-target.c",
        "gst-libs/gst/pbutils/install-plugins.c",
        "gst-libs/gst/pbutils/missing-plugins.c",
        "gst-libs/gst/pbutils/gstdiscoverer.c",
        "gst-libs/gst/pbutils/gstdiscoverer-types.c",
        "gst-libs/gst/pbutils/gstaudiovisualizer.c",
        "gst-libs/gst/pbutils/pbutils-enumtypes.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstpbutils") {
    deps = [
        ":gstpbutils_source",
        ":gsttag",
        ":gstvideo",
        ":gstaudio",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("gsttag_source") {
    sources = [
        "gst-libs/gst/tag/gstexiftag.c",
        "gst-libs/gst/pbutils/gstpluginsbaseversion.c",
        "gst-libs/gst/tag/gstvorbistag.c",
        "gst-libs/gst/tag/gstid3tag.c",
        "gst-libs/gst/tag/gstxmptag.c",
        "gst-libs/gst/tag/lang.c",
        "gst-libs/gst/tag/licenses.c",
        "gst-libs/gst/tag/tags.c",
        "gst-libs/gst/tag/gsttagdemux.c",
        "gst-libs/gst/tag/gsttagmux.c",
        "gst-libs/gst/tag/gsttageditingprivate.c",
        "gst-libs/gst/tag/id3v2.c",
        "gst-libs/gst/tag/id3v2frames.c",
        "gst-libs/gst/tag/xmpwriter.c",
        "gst-libs/gst/tag/tag-enumtypes.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gsttag") {
    deps = [
        ":gsttag_source",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("gstfft_source") {
    sources = [
        "gst-libs/gst/fft/gstfft.c",
        "gst-libs/gst/fft/gstffts16.c",
        "gst-libs/gst/fft/gstffts32.c",
        "gst-libs/gst/fft/gstfftf32.c",
        "gst-libs/gst/fft/gstfftf64.c",
        "gst-libs/gst/fft/kiss_fft_s16.c",
        "gst-libs/gst/fft/kiss_fft_s32.c",
        "gst-libs/gst/fft/kiss_fft_f32.c",
        "gst-libs/gst/fft/kiss_fft_f64.c",
        "gst-libs/gst/fft/kiss_fftr_s16.c",
        "gst-libs/gst/fft/kiss_fftr_s32.c",
        "gst-libs/gst/fft/kiss_fftr_f32.c",
        "gst-libs/gst/fft/kiss_fftr_f64.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstfft") {
    deps = [
        ":gstfft_source",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("gstvideo_source") {
    sources = [
        "gst-libs/gst/video/colorbalance.c",
        "gst-libs/gst/video/colorbalancechannel.c",
        "gst-libs/gst/video/convertframe.c",
        "gst-libs/gst/video/gstvideoaffinetransformationmeta.c",
        "gst-libs/gst/video/gstvideoaggregator.c",
        "gst-libs/gst/video/gstvideodecoder.c",
        "gst-libs/gst/video/gstvideoencoder.c",
        "gst-libs/gst/video/gstvideofilter.c",
        "gst-libs/gst/video/gstvideometa.c",
        "gst-libs/gst/video/gstvideopool.c",
        "gst-libs/gst/video/gstvideosink.c",
        "gst-libs/gst/video/gstvideotimecode.c",
        "gst-libs/gst/video/gstvideoutils.c",
        "gst-libs/gst/video/gstvideoutilsprivate.c",
        "gst-libs/gst/video/navigation.c",
        "gst-libs/gst/video/video-anc.c",
        "gst-libs/gst/video/video-blend.c",
        "gst-libs/gst/video/video.c",
        "gst-libs/gst/video/video-chroma.c",
        "gst-libs/gst/video/video-color.c",
        "gst-libs/gst/video/video-converter.c",
        "gst-libs/gst/video/videodirection.c",
        "gst-libs/gst/video/video-dither.c",
        "gst-libs/gst/video/video-enumtypes.c",
        "gst-libs/gst/video/video-event.c",
        "gst-libs/gst/video/video-format.c",
        "gst-libs/gst/video/video-frame.c",
        "gst-libs/gst/video/video-info.c",
        "gst-libs/gst/video/video-multiview.c",
        "gst-libs/gst/video/video-orc-dist.c",
        "gst-libs/gst/video/videoorientation.c",
        "gst-libs/gst/video/videooverlay.c",
        "gst-libs/gst/video/video-overlay-composition.c",
        "gst-libs/gst/video/video-resampler.c",
        "gst-libs/gst/video/video-scaler.c",
        "gst-libs/gst/video/video-tile.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstvideo") {
    deps = [
        ":gstvideo_source",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("gstaudio_source") {
    sources = [
        "gst-libs/gst/audio/audio-buffer.c",
        "gst-libs/gst/audio/audio.c",
        "gst-libs/gst/audio/audio-channel-mixer.c",
        "gst-libs/gst/audio/audio-channels.c",
        "gst-libs/gst/audio/audio-converter.c",
        "gst-libs/gst/audio/audio-enumtypes.c",
        "gst-libs/gst/audio/audio-format.c",
        "gst-libs/gst/audio/audio-info.c",
        "gst-libs/gst/audio/audio-quantize.c",
        "gst-libs/gst/audio/audio-resampler.c",
        "gst-libs/gst/audio/gstaudioaggregator.c",
        "gst-libs/gst/audio/gstaudiobasesink.c",
        "gst-libs/gst/audio/gstaudiobasesrc.c",
        "gst-libs/gst/audio/gstaudiocdsrc.c",
        "gst-libs/gst/audio/gstaudioclock.c",
        "gst-libs/gst/audio/gstaudiodecoder.c",
        "gst-libs/gst/audio/gstaudioencoder.c",
        "gst-libs/gst/audio/gstaudiofilter.c",
        "gst-libs/gst/audio/gstaudioiec61937.c",
        "gst-libs/gst/audio/gstaudiometa.c",
        "gst-libs/gst/audio/gstaudiopack-dist.c",
        "gst-libs/gst/audio/gstaudioringbuffer.c",
        "gst-libs/gst/audio/gstaudiosink.c",
        "gst-libs/gst/audio/gstaudiosrc.c",
        "gst-libs/gst/audio/gstaudiostreamalign.c",
        "gst-libs/gst/audio/gstaudioutilsprivate.c",
        "gst-libs/gst/audio/streamvolume.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstaudio") {
    deps = [
        ":gstaudio_source",
        ":gsttag",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("audioconvert_source") {
    sources = [
        "gst/audioconvert/gstaudioconvert.c",
        "gst/audioconvert/plugin.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstaudioconvert") {
    deps = [
        ":audioconvert_source",
        ":gstaudio",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("typefind_source") {
    sources = [
        "gst/typefind/gsttypefindfunctions.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gsttypefindfunctions") {
    deps = [
        ":typefind_source",
        ":gstpbutils",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("subparse_source") {
    sources = [
        "gst/subparse/gstssaparse.c",
        "gst/subparse/gstsubparse.c",
        "gst/subparse/mpl2parse.c",
        "gst/subparse/qttextparse.c",
        "gst/subparse/samiparse.c",
        "gst/subparse/tmplayerparse.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstsubparse") {
    deps = [
        ":subparse_source",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("audioresample_source") {
    sources = [
        "gst/audioresample/gstaudioresample.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstaudioresample") {
    deps = [
        ":audioresample_source",
        ":gstaudio",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("audiorate_source") {
    sources = [
        "gst/audiorate/gstaudiorate.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstaudiorate") {
    deps = [
        ":audiorate_source",
        ":gstaudio",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("audiomixer_source") {
    sources = [
        "gst/audiomixer/gstaudiointerleave.c",
        "gst/audiomixer/gstaudiomixer.c",
        "gst/audiomixer/gstaudiomixerorc-dist.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstaudiomixer") {
    deps = [
        ":audiomixer_source",
        ":gstaudio",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("rawparse_source") {
    sources = [
        "gst/rawparse/gstrawaudioparse.c",
        "gst/rawparse/gstrawbaseparse.c",
        "gst/rawparse/gstrawvideoparse.c",
        "gst/rawparse/gstunalignedaudioparse.c",
        "gst/rawparse/gstunalignedvideoparse.c",
        "gst/rawparse/plugin.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstrawparse") {
    deps = [
        ":rawparse_source",
        ":gstaudio",
        ":gstvideo",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("riff_source") {
    sources = [
        "gst-libs/gst/riff/riff.c",
        "gst-libs/gst/riff/riff-media.c",
        "gst-libs/gst/riff/riff-read.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstriff") {
    deps = [
        ":riff_source",
        ":gstaudio",
        ":gstvideo",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/gstreamer/gstplugins_base:gsttag",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("rtp_source") {
    sources = [
        "gst-libs/gst/rtp/gstrtcpbuffer.c",
        "gst-libs/gst/rtp/gstrtpbaseaudiopayload.c",
        "gst-libs/gst/rtp/gstrtpbasedepayload.c",
        "gst-libs/gst/rtp/gstrtpbasepayload.c",
        "gst-libs/gst/rtp/gstrtpbuffer.c",
        "gst-libs/gst/rtp/gstrtp-enumtypes.c",
        "gst-libs/gst/rtp/gstrtphdrext.c",
        "gst-libs/gst/rtp/gstrtpmeta.c",
        "gst-libs/gst/rtp/gstrtppayloads.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstrtp") {
    deps = [
        ":rtp_source",
        ":gstaudio",
        ":gstvideo",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/gstreamer/gstplugins_base:gsttag",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("videoconvert_source") {
    sources = [
        "gst/videoconvert/gstvideoconvert.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstvideoconvert") {
    deps = [
        ":videoconvert_source",
        ":gstaudio",
        ":gstvideo",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/gstreamer/gstplugins_base:gsttag",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("videoscale_source") {
    sources = [
        "gst/videoscale/gstvideoscale.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstvideoscale") {
    deps = [
        ":videoscale_source",
        ":gstaudio",
        ":gstvideo",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/gstreamer/gstplugins_base:gsttag",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}

ohos_source_set("app_source") {
    sources = [
        "gst/app/gstapp.c",
        "gst-libs/gst/app/gstappsrc.c",
        "gst-libs/gst/app/gstappsink.c",
        "gst-libs/gst/app/app-enumtypes.c",
    ]

    configs = [
        ":gst_plugins_config",
    ]
}

ohos_shared_library("gstapp") {
    deps = [
        ":app_source",
        "//third_party/gstreamer/gstreamer:gstreamer",
        "//third_party/gstreamer/gstreamer:gstbase",
        "//third_party/gstreamer/gstplugins_base:gsttag",
        "//third_party/glib:glib",
        "//third_party/glib:gobject",
        "//third_party/glib:gmodule",
    ]

    relative_install_dir = "media/plugins"
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}
